# deepInsight

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  NOTICE.md  README.en.md  README.md  config.yaml  docker-compose.yaml  experts.yaml  mcp_client_config.example.json  mcp_client_config.json  mcp_config.example.json  mcp_config.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0aa1fd6c1c28_add_knowledge_models.py  28c9cd2eb998_init_academic_models.py  450f0e1f6634_paper_table_add_conference_id.py
deepinsight/: app.py  main.py  server.py
deepinsight/api/: app.py
deepinsight/cli/: __init__.py  main.py
deepinsight/cli/commands/: __init__.py  api.py  conference.py  research.py  stream.py
deepinsight/config/: app_config.py  config.py  database_config.py  file_storage_config.py  langfuse_config.py  llm_config.py  model.py  prompt_management_config.py  rag_config.py  scenarios_config.py  workspace_config.py
deepinsight/core/: orchestration.py  orchestrator.py
deepinsight/core/agent/: base.py  base_agent.py  planner.py  reporter.py  researcher.py  stream_chat_agent.py
deepinsight/core/prompt/: conf_chat.py  conference_best_papers.py  conference_keynotes.py  conference_overview.py  conference_ppt_generate.py  conference_qa.py  conference_submission.py  conference_topic.py  deep_research.py  expert_review.py  plan.py  prompt_manager.py  prompt_template.py  report.py  research.py  summary_experts.py
deepinsight/core/tools/: best_paper_analysis.py  file_download.py  file_system.py  keynote_analysis.py  mem_file_system.py  paper_statistic.py  ragflow_retrival.py  tavily_search.py  wordcloud_tool.py
deepinsight/core/types/: __init__.py  agent.py  conference_constants.py  graph_config.py  graph_nodes.py  historical_message.py  messages.py  research.py
deepinsight/core/utils/: __init__.py  context_utils.py  llm_token_utils.py  mcp_utils.py  progress_utils.py  research_utils.py  tool_utils.py  utils.py
deepinsight/databases/: __init__.py  connection.py
deepinsight/databases/models/: __init__.py  academic.py  base.py  knowledge.py
deepinsight/service/: conversation.py  deep_research.py
deepinsight/service/conference/: __init__.py  conference.py  iso-3166-1.yaml  paper_extractor.py  ror.py
deepinsight/service/knowledge/: __init__.py  knowledge.py
deepinsight/service/ppt/: template_service.py
deepinsight/service/rag/: __init__.py  engine.py  types.py
deepinsight/service/research/: research.py
deepinsight/service/schemas/: chat.py  common.py  conference.py  conversation.py  knowledge.py  paper_extract.py  rag.py  research.py  streaming.py
deepinsight/service/streaming/: stream_adapter.py
deepinsight/stores/mongodb/: database.py
deepinsight/stores/postgresql/: database.py
deepinsight/utils/: aio.py  common.py  console_utils.py  db_schema_utils.py  file_utils.py  llm_utils.py  log_utils.py  parallel_worker_utils.py  progress.py  singleton.py  tavily_key_utils.py  tavily_managed.py  tavily_manager.py  trace_utils.py  trans_md_to_pdf.py  zip_utils.py
deepinsight/utils/file_storage/: __init__.py  base.py  factory.py  identify.py  local.py  mem_fs.py  s3_compatible.py
deepinsight/utils/md_render/: __init__.py  fonts.yaml  layout.css
docs/: CONTRIBUTING.md  conceptual_guide.md  user_guide.md
docs/deployment/: mineru.md
integrations/mcps/: conference_paper.py  generate_chart.py  tavily.py  utils.py
scripts/: download_models.py
templates/: conference_template.pptx
tests/core/agents/: test_base_agent.py  test_stream_chat_agent.py
tests/service/conference/: __init__.py  test_db_operation.py
tests/service/rag/: test_image_replacement.py  test_mineru_offline.py
tests/utils/: test_aio.py  test_md_render.py  test_singleton.py  test_storage_local.py  test_trace_utils.py
tests/utils/file_storage/: __init__.py  test_storage_s3.py  test_utils.py
web/: .umirc.ts  default.conf  package.json  tailwind.css  tsconfig.json
web/src/: app.tsx  conf.json  global.less  routes.ts
web/src/components/: copy-to-clipboard.tsx
web/src/constants/: chat.ts  knowledge.ts
web/src/hooks/: auth-hooks.ts  chat-hooks.ts  chunk-hooks.ts  common-hooks.tsx  document-hooks.ts  file-manager-hooks.ts  flow-hooks.ts  llm-hooks.tsx  logic-hooks.ts  login-hooks.ts
web/src/lib/: utils.ts
web/src/locales/: de.ts  en.ts  es.ts  id.ts  ja.ts  pt-br.ts  vi.ts  zh-traditional.ts  zh.ts
web/src/services/: chat-service.ts  file-manager-service.ts  (+1 more)
(+116 files in other folders)
