[project]
name = "deepinsight"
version = "0.1.0"
description = "DeepInsight assistant."
authors = [
    { name = "deepinsight", email = "deepinsight@huawei.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

# 应用依赖（按用户提供清单）
dependencies = [
  "langfuse >= 3.0.6",
  "langgraph >= 1.0.3",
  "langmem >= 0.0.20",
  "langchain >= 1.0.7",
  "langchain-experimental >= 0.4.0",

  # llm dependency
  "langchain-openai >= 1.0",
  "langchain-deepseek >= 1.0",
  "langchain-anthropic >= 0.3",
  "langchain-google-genai >= 2.0",
  "langchain-google-vertexai >= 2.0",
  "langchain-aws >= 1.0",
  "langchain-groq >= 1.0",
  "langchain-cohere >= 0.5",
  "langchain-mistralai >= 0.2",
  "langchain-ibm >= 1.0",
  "langchain-xai >= 1.0",
  "langchain-tavily >= 0.2",

  "langchain-community >= 0.4",
  "langchain-mcp-adapters >= 0.1",
  "SQLAlchemy >= 2.0, < 3.0",
  "alembic >= 1.10",
  "python-dotenv >= 1.0",
  "fastapi >= 0.1",
  "uvicorn >= 0.10",
  "tavily-python >= 0.7.13",
  "rich >= 10.0",
  "InquirerPy >= 0.2",
  "weasyprint >= 60.0",
  "markdown >= 3.0",
  "prompt-toolkit >= 2.0",
  "fastmcp >= 2.0",
  "arxiv >= 2.0",
  "kaleido == 0.2.1",
  "deepagents >= 0.2.7",
  "python-pptx >= 1.0",
  "plotly >= 6.0",
  "camel-ai == 0.2.60",
  "lightrag-hku >= 1.4",
  "wordcloud >= 1.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary >=2.9"]
mysql = ["mysqlclient >=2.1"]
sqlite_async = ["aiosqlite >=0.18"]

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

# Poetry 仍用于打包入口与包收集，保持与项目结构一致
[tool.poetry]
packages = [
    { include = "deepinsight" },
    { include = "integrations" }
]

[tool.poetry.scripts]
deepinsight = "deepinsight.cli.main:main"